[gd_scene load_steps=6 format=2]

[ext_resource path="res://MapsRelated/MapList/Map_Passage/MapComponents/PathButton/MapPassage_PathButton.gd" type="Script" id=1]
[ext_resource path="res://MapsRelated/MapList/Map_Passage/Assets_MapComponents/PathButton/PathToggleButton_Pic_OffState.png" type="Texture" id=2]
[ext_resource path="res://MapsRelated/MapList/Map_Passage/Assets_MapComponents/PathButton/PathToggleButton_Background_Normal.png" type="Texture" id=3]
[ext_resource path="res://MapsRelated/MapList/Map_Passage/Assets_MapComponents/PathButton/PathToggleButton_Border_Activatable.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=5]

[node name="MapPassage_PathButton" type="MarginContainer"]
margin_right = 27.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Button" parent="." instance=ExtResource( 5 )]
margin_right = 27.0

[node name="Background" type="TextureRect" parent="."]
margin_right = 27.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Left" type="TextureRect" parent="."]
margin_right = 3.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Right" type="TextureRect" parent="."]
margin_left = 24.0
margin_right = 27.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Top" type="TextureRect" parent="."]
margin_right = 27.0
margin_bottom = 3.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Bottom" type="TextureRect" parent="."]
margin_top = 37.0
margin_right = 27.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 4 )
stretch_mode = 2

[node name="ButtonIcon" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 5.0
margin_right = 19.0
margin_bottom = 35.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="released_mouse_event" from="Button" to="." method="_on_Button_released_mouse_event"]
